--- a/src/main/resources/templates/guest/cart.html
+++ b/src/main/resources/templates/guest/cart.html
@@ -36,6 +36,7 @@
 	th:href="@{/skin/default_skin/less/theme.css}">
 <link rel="stylesheet" type="text/css"
 	th:href="@{/allcp/forms/css/forms.css}">
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
 </head>
 <body>
 	<header th:replace="guest/headerClient::header"></header>
@@ -46,9 +47,7 @@
 				<div class="col-lg-10">
 					<div class="generic-banner-content">
 						<h2 class="text-white">Cart</h2>
-						<p class="text-white">
-							Please check before check out
-						</p>
+						<p class="text-white">Please check before check out</p>
 
 					</div>
 				</div>
@@ -59,6 +58,7 @@
 		class="animated fadeIn pt35 pb45" th:fragment="sales-stats-purchases">
 		<div class="content-right table-layout">
 			<!-- Column Left -->
+			<form th:action="@{/confirmcart}">
 			<aside class="chute chute-left chute290 chute-icon-style br5"
 				data-chute-height="match">
 				<div class="chute-icon"></div>
@@ -68,15 +68,20 @@
 						<div class="">
 							<h2 style="color: navy">Information</h2>
 							<h6>
-								Full Name:<span th:text="${customer.customer_name}"></span>
+								Full Name: <span th:text="${customer.customer_name}"></span>
 							</h6>
-							<br>
+
 							<h6>
-								Address:<span th:text="${customer.address}"></span>
+								<input type="radio" th:value="${customer.address}"
+									th:field="*{customer.address}"/>
+									 Address: <span th:text="${customer.address}"></span><br>
+									  <input
+									type="radio" value="" th:field="*{customer.address}">Shipping
+								Address:<input th:value="${customer.address}" type="text" id="addressSend" name="addressSend" />
 							</h6>
-							<br>
+							<h6>Delivery Time:<input type="text" name="time" id="time"/></h6>
 							<h6>
-								Phone Number:<span th:text="${customer.customer_phone}"></span>
+								Phone Number: <span th:text="${customer.customer_phone}"></span>
 							</h6>
 							<br>
 						</div>
@@ -93,7 +98,7 @@
 
 					<div class="table-responsive">
 						<br> <br> <br>
-						<form th:action="@{/confirmcart}">
+						
 
 							<table
 								class="table allcp-form theme-warning tc-checkbox-1 table-style-2 btn-gradient-grey fs13">
@@ -124,14 +129,11 @@
 													th:selected="${temp.id} eq ${tempProduct.sizeId}"
 													th:text="${temp.name}"></option>
 										</select></td>
-										<td class="">
-										<input
-											type="number" min="1" max="100"
+										<td class=""><input type="number" min="1" max="100"
 											th:value="${tempProduct.quantity}"
 											th:id="'quantity'+${tempProduct.idCart}"
 											th:name="${tempProduct.idCart}"
-											th:onchange="updateQuantity(this.name)" />
-											</td>
+											th:onchange="updateQuantity(this.name)" /></td>
 
 										<td class="" th:text="${tempProduct.price} + ' VND'"></td>
 										<td class=""><span
@@ -155,10 +157,12 @@
 									<input class="btn btn-primary" type="submit" value="Comfirm">
 								</p>
 							</div>
-						</form>
+						
 					</div>
 				</div>
+				
 			</div>
+			</form>
 		</div>
 	</section>
 	<!-- End video-sec Area -->
@@ -169,7 +173,42 @@
 
 	<footer th:replace="guest/footerClient"></footer>
 	<!-- End footer Area -->
-
+	
+	<script th:src="@{/js/vendor/jquery-2.2.4.min.js}"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+		crossorigin="anonymous"></script>
+	<script th:src="@{/js/vendor/bootstrap.min.js}"></script>
+	<script type="text/javascript"
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+	<script th:src="@{/js/easing.min.js}"></script>
+	<script th:src="@{/js/hoverIntent.js}"></script>
+	<script th:src="@{/js/superfish.min.js}"></script>
+	<script th:src="@{/js/jquery.ajaxchimp.min.js}"></script>
+	<script th:src="@{/js/jquery.magnific-popup.min.js}"></script>
+	<script th:src="@{/js/owl.carousel.min.js}"></script>
+	<script th:src="@{/js/jquery.sticky.js}"></script>
+	<script th:src="@{/js/jquery.nice-select.min.js}"></script>
+	<script th:src="@{/js/parallax.min.js}"></script>
+	<script th:src="@{/js/waypoints.min.js}"></script>
+	<script th:src="@{/js/jquery.counterup.min.js}"></script>
+	<script th:src="@{/js/mail-script.js}"></script>
+	<script th:src="@{/js/main.js}"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+	<script type="text/javascript">
+		$('#time').timepicker({
+			timeFormat : 'h:mm p',
+			interval : 30,
+			minTime : '10',
+			maxTime : '8:00pm',
+			defaultTime: 'now',
+			startTime : 'new Date(0,0,30,0,0)',
+			dynamic : false,
+			dropdown : true,
+			scrollbar : true
+		});
+	</script>
 	<script>
 		function updateQuantity(val) {
 			var idCart = val;
@@ -196,26 +235,13 @@
 			});
 		}
 	</script>
-	<script th:src="@{/js/vendor/jquery-2.2.4.min.js}"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-		crossorigin="anonymous"></script>
-	<script th:src="@{/js/vendor/bootstrap.min.js}"></script>
-	<script type="text/javascript"
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
-	<script th:src="@{/js/easing.min.js}"></script>
-	<script th:src="@{/js/hoverIntent.js}"></script>
-	<script th:src="@{/js/superfish.min.js}"></script>
-	<script th:src="@{/js/jquery.ajaxchimp.min.js}"></script>
-	<script th:src="@{/js/jquery.magnific-popup.min.js}"></script>
-	<script th:src="@{/js/owl.carousel.min.js}"></script>
-	<script th:src="@{/js/jquery.sticky.js}"></script>
-	<script th:src="@{/js/jquery.nice-select.min.js}"></script>
-	<script th:src="@{/js/parallax.min.js}"></script>
-	<script th:src="@{/js/waypoints.min.js}"></script>
-	<script th:src="@{/js/jquery.counterup.min.js}"></script>
-	<script th:src="@{/js/mail-script.js}"></script>
-	<script th:src="@{/js/main.js}"></script>
+	<script type="text/javascript">
+		$("#address1").click(function() {
+		    
+		    $("#addressSend").val($("#address1").val());
+		    //alert("a"+$("#address1").val());
+		});
+		
+	</script>
 </body>
 </html>
